# AISecOps

./: .gitignore  AGENTS.md  CLAUDE.md  CONSTRAINTS.md  PRINCIPLES.md  README.md  pyproject.toml
.claude/: settings.json  settings.local.json.example
.claude/agents/: layer-architect.md  mcp-builder.md  security-analyst.md
.claude/commands/: add-agent.md  add-mcp.md  verify-layer.md
.claude/context/: architecture.md  glossary.md
docs/: README.md  architecture-v2.md
docs/adr/: 0001-architecture-baseline.md  0002-architecture-v2-supersedes-png.md  0003-self-use-positioning.md  README.md
docs/specs/: PRD.md  README.md  compatibility.md  dev-plan.md  technical-design.md
src/aisecops/L01_human_interface/: README.md
src/aisecops/L02_agents/: README.md
src/aisecops/L03_ai_assets_rag/: README.md
src/aisecops/L04_ai_assets_models/: README.md
src/aisecops/L05_gateway/: README.md
src/aisecops/L06_mcp_servers/: README.md
src/aisecops/L07_secops_capabilities/: README.md
src/aisecops/L08_analytics_engines/: README.md
src/aisecops/L09_data_platform/: README.md
src/aisecops/L10_data_collection/: README.md
src/aisecops/L11_target_estate/: README.md
src/aisecops/L12_core_support/: README.md
tests/: README.md
